# VikEngine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
Engine/: CMakeLists.txt
Engine/include/: Asserts.h  Engine.h  Renderer.h  Singleton.h
Engine/src/: Engine.cpp  Engine.h
Game/: CMakeLists.txt  Info.plist.in
Game/src/: main.cpp
Libs/: CMakeLists.txt
